changement d'uploader pour SimpleUpload

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   },
   "scripts": {
     "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-upload": "latest"
   }
 }
